# distributed-computing

./: .gitignore  CMakeLists.txt
src/pa1/: ipc.c  logs.c  logs.h  main.c  main.h  pipes.c  pipes.h
src/pa2/: Makefile  branch.c  branch.h  descriptors.c  descriptors.h  environment.txt  history.c  history.h  ipc.c  logs.c  logs.h  main.c  main.h  message.c  message.h  messageUtils.c  messageUtils.h  pa23.c  pa23.h  pipes.c  pipes.h
src/pa2/pa2345_starter_code/: banking.h  pa2345.h
src/pa3/: Makefile  bank_robbery.c  branch.c  branch.h  descriptors.c  descriptors.h  environment.txt  history.c  history.h  ipc.c  ipcx.h  lamport.c  lamport.h  logs.c  logs.h  message.c  message.h  pa23.c  pa23.h
src/pa4/: Makefile  branch.c  branch.h  criticalSection.c  criticalSection.h  environment.txt  history.c  history.h  ipc.c  ipcx.h  logs.c  logs.h  main.c  main.h  message.c  message.h  pa23.c  queue.h  workers.c
src/pa5/: Makefile  branch.c  branch.h  criticalSection.c  criticalSection.h  environment.txt  ipc.c  lamport.h  message.c  message.h  queue.c  workers.h
src/pal/: ipc.c  logs.c  logs.h  main.c  main.h  pipes.h  testProg.c  twoPipes.c
